tests/negative/gold/type2_test.gold
tests/negative/type2_test.toit:3:7: error: Unresolved type: 'NonExisting'
glob /NonExisting := null
      ^~~~~~~~~~~
Compilation failed.
